# IkomiaStudio

./: .gitignore  CMainView.ui  CMakeLists.txt  IkomiaStudio.pri  IkomiaStudio.pro  IkomiaStudioConfig.cmake.in  LocalSettingsTemplate.cmake  LocalSettingsTemplate.pri  README.md  Versions.cmake  agpl-3.0.rtf  app.rc  macros.pri  main.py  mainstyle.css  res.qrc
.github/ISSUE_TEMPLATE/: bug_report.md
Controller/: CMainCtrl.cpp  CMainCtrl.h
Doc/: Doxyfile
Images/: check_png.sh  ikomia.icns
Main/: AppDefine.hpp  AppTools.hpp  LogCategory.cpp  LogCategory.h  PyLogHook.hpp  forwards.hpp  main.cpp  pch.hpp
Migrations/: migration0001.sql  migration0002.sql
Model/: CDbManager.cpp  CDbManager.h  CItem.hpp  CMainModel.cpp  CMainModel.h  CMultiModel.cpp  CMultiModel.h  CTrainingMonitoring.cpp  CTrainingMonitoring.h  CTreeItem.hpp  CTreeModel.hpp
Model/Common/: CDbManager.cpp  CHttpRequest.cpp  CHttpRequest.h  CMultiModel.h  CTrainingMonitoring.cpp  CTrainingMonitoring.h  CTreeItem.hpp
Model/Crash/: QBreakpadHandler.cpp  QBreakpadHandler.h  QBreakpadHttpUploader.cpp  QBreakpadHttpUploader.h
Model/Data/: CFeaturesTableModel.cpp  CFeaturesTableModel.h  CMainDataManager.cpp  CMainDataManager.h  CMeasuresTableModel.cpp  CMeasuresTableModel.h  CMultiImageModel.cpp  CMultiImageModel.h
Model/Graphics/: CGraphicsDbManager.cpp  CGraphicsDbManager.h  CGraphicsLayerInfo.hpp  CGraphicsLayerItem.hpp  CGraphicsManager.cpp  CGraphicsManager.h  CGraphicsRegistration.cpp  CGraphicsRegistration.h
Model/Hub/: CHubDbManager.cpp  CHubDbManager.h  CHubManager.cpp  CHubManager.h  CHubOnlineIconManager.cpp  CHubOnlineIconManager.h  CHubQueryModel.cpp  CHubQueryModel.h  CPluginModel.cpp  CPluginModel.h
Model/Matomo/: piwiktracker.cpp  piwiktracker.h
Model/Plugin/: CPluginManager.cpp  CPluginManager.h  CPluginPythonDependencyModel.cpp  CPluginPythonDependencyModel.h  CPluginPythonModel.cpp  CPluginPythonModel.h  CPluginTools.cpp  CPluginTools.h
Model/Process/: CProcessItem.hpp  CProcessManager.cpp  CProcessManager.h  CProcessModel.hpp
Model/ProgressBar/: CProgressBarManager.cpp  CProgressBarManager.h
Model/Project/: CDatasetItem.hpp  CDatasetItemDbMgr.cpp  CDatasetItemDbMgr.h  CDimensionItem.hpp  CDimensionItemDbMgr.cpp  CDimensionItemDbMgr.h  CFolderItem.hpp  CFolderItemDbMgr.cpp  CFolderItemDbMgr.h  CMultiProjectModel.cpp  CMultiProjectModel.h  CProjectDataProxyModel.cpp  CProjectDataProxyModel.h  CProjectDbManager.hpp  CProjectDbMgrInterface.hpp  CProjectDbMgrRegistration.cpp  CProjectDbMgrRegistration.h  CProjectExportMgr.cpp  CProjectExportMgr.h  CProjectGraphicsProxyModel.cpp  CProjectGraphicsProxyModel.h  CProjectItem.hpp  CProjectItemDbMgr.cpp  CProjectItemDbMgr.h  CProjectManager.cpp  CProjectManager.h  CProjectModel.cpp  CProjectModel.h  CProjectUtils.hpp  CProjectViewProxyModel.cpp  CProjectViewProxyModel.h
Model/Protocol/: CProtocolDBManager.cpp  CProtocolDBManager.h  CProtocolInput.cpp  CProtocolInput.h  CProtocolInputViewManager.cpp  CProtocolInputViewManager.h  CProtocolManager.cpp  CProtocolManager.h  CProtocolRunManager.cpp  CProtocolRunManager.h
Model/Render/: C3dAnimation.cpp  C3dAnimation.h  CRenderManager.cpp  CRenderManager.h
Model/Results/: CResultDbManager.cpp  CResultDbManager.h  CResultItem.hpp  CResultManager.cpp  CResultManager.h
Model/Settings/: CSettingsManager.cpp  CSettingsManager.h
Model/Store/: CPluginModel.cpp  CPluginModel.h  CStoreDbManager.cpp  CStoreDbManager.h  CStoreManager.cpp  CStoreManager.h  CStoreOnlineIconManager.cpp  CStoreOnlineIconManager.h  CStoreQueryModel.cpp  CStoreQueryModel.h
Model/User/: CUser.cpp  CUser.h  CUserManager.cpp  CUserManager.h  CUserNamespace.cpp  CUserNamespace.h  CUserSqlQueryModel.cpp  CUserSqlQueryModel.h
Model/Wizard/: CWizardDbManager.cpp  CWizardDbManager.h  CWizardManager.cpp  CWizardManager.h  CWizardQueryModel.cpp  CWizardQueryModel.h  CWizardScenario.cpp  CWizardScenario.h  CWizardStepModel.cpp  CWizardStepModel.h
Model/Workflow/: CWorkflowDBManager.cpp  CWorkflowDBManager.h  CWorkflowInput.cpp  CWorkflowInput.h  CWorkflowInputViewManager.cpp  CWorkflowInputViewManager.h  CWorkflowManager.cpp  CWorkflowManager.h  CWorkflowPackage.cpp  CWorkflowPackage.h  CWorkflowRunManager.cpp  CWorkflowRunManager.h  CWorkflowScaleManager.cpp  CWorkflowScaleManager.h
Templates/C++/: template.pro  template_core.cpp  template_core.h  template_global.hpp
Templates/Documentation/: index.html  markdown.css
Templates/Python/: template.py  template_PyQtLayout.py  template_PySideLayout.py  template_process.py  template_readme.md  template_test.py  template_widget.py
Translations/: ikomia_fr.qm  ikomia_fr.ts
View/Common/: CBorderLayout.cpp  CBorderLayout.h  CBubbleTip.cpp  CBubbleTip.h  CCameraDlg.cpp  CCameraDlg.h  CContextMenu.hpp  CCrashReporDlg.cpp  CCrashReporDlg.h  CDialog.cpp  CDialog.h  CDockWidgetTitleBar.cpp  CDockWidgetTitleBar.h  CFramelessHelper.cpp  CFramelessHelper.h  CGLWidget.cpp  CGLWidget.h  CGraphicsItemTools.hpp  CHtmlDelegate.cpp  CHtmlDelegate.h  CImageListView.cpp  CImageListView.h  CInfoPane.cpp  CInfoPane.h  CListViewDelegate.cpp  CListViewDelegate.h  CPane.cpp  CPane.h  CProgressCircle.cpp  CProgressCircle.h  CProgressCircleManager.cpp  CProgressCircleManager.h  CResizeStackedWidget.cpp  CResizeStackedWidget.h  CRollupBtn.cpp  CRollupBtn.h  CRollupWidget.cpp  CRollupWidget.h  CStackedPane.cpp  CStackedPane.h  (+4 more)
View/DoubleView/: CDataDisplay.cpp  CDataDisplay.h  CDataDisplayLayout.cpp  CDataDisplayLayout.h  CDataListView.cpp  CDataListView.h  CDataListViewDelegate.cpp  CDataListViewDelegate.h  CDataViewer.cpp  CDataViewer.h  CDoubleView.cpp  CDoubleView.h  CJsonDisplay.cpp  CJsonDisplay.h  CPathNavigator.cpp  CPathNavigator.h  CStaticDisplay.cpp  CStaticDisplay.h  CTextDisplay.cpp  CTextDisplay.h  CWidgetDataDisplay.cpp  CWidgetDataDisplay.h
View/Graphics/: CGraphicsEllipsePropWidget.cpp  CGraphicsEllipsePropWidget.h  CGraphicsLayerChoiceDlg.cpp  CGraphicsLayerChoiceDlg.h  CGraphicsPointPropWidget.cpp  CGraphicsPointPropWidget.h  CGraphicsPolygonPropWidget.cpp  CGraphicsToolbar.cpp  (+10 more)
(+224 files in other folders)
